# bookthing

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: book.rs  database.rs  lib.rs  main.rs  subcommands.rs
